# carbon-diff

./: .envrc  .gitignore  README.md  cdiff.yml  docker-compose.yml  pnpm-lock.yaml  pyproject.toml
.github/workflows/: use-carbon-diff.yml
action/: Dockerfile  action.yml
carbon_diff/: badge.py  cli.py  config.py
carbon_diff/api/: main.py
carbon_diff/data/: aws_factors.json  azure_factors.json  gcp_factors.json
carbon_diff/diff/: __init__.py  diff.py
carbon_diff/ledger/: db.py  models.py  record.py
carbon_diff/providers/: __init__.py  aws.py  azure.py  base.py  gcp.py
dashboard/: package.json
dashboard/app/: layout.tsx
dashboard/app/repo/[...slug]/: page.tsx
fixtures/: cdiff_multi.yml
fixtures/aws/: sample.csv
fixtures/aws/gcp/: sample_gcp.parquet
fixtures/azure/: 20240524.csv
tests/: test_api.py  test_azure_parser.py  test_badge.py  test_delta.py  test_parser.py  test_provider_map.py
